<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/toolbarAllItem"
        android:orderInCategory="100"
        android:title="@string/all"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/toolbarWorkoutsItem"
        android:orderInCategory="200"
        android:title="@string/workouts"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/toolbarEventsItem"
        android:orderInCategory="200"
        android:title="@string/events"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/toolbarRoutesItem"
        android:orderInCategory="200"
        android:title="@string/routes"
        app:showAsAction="collapseActionView" />
</menu>