<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dialogUserProfileGenderEditingBackgroundCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="12dp"
        card_view:cardUseCompatPadding="true">

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/dialogUserProfileGenderEditingBackgroundBlurLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_glass_capsule_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/dialogUserProfileGenderEditingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/edit_your_gender"
                    android:textColor="@color/AppGray"
                    android:textSize="20sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <RelativeLayout
                        android:id="@+id/dialogUserProfileGenderEditingCancelRelativeLayout"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/gradient_red_capsule"
                        android:padding="5dp"
                        card_view:layout_constraintEnd_toStartOf="@+id/dialogUserProfileGenderEditingFemaleRelativeLayout"
                        card_view:layout_constraintHorizontal_bias="0.5"
                        card_view:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/dialogUserProfileGenderEditingCancelImageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_block"
                            app:tint="@color/White" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/dialogUserProfileGenderEditingFemaleRelativeLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/gradient_blue_capsule"
                        android:gravity="center"
                        android:padding="5dp"
                        card_view:layout_constraintEnd_toStartOf="@+id/dialogUserProfileGenderEditingMaleRelativeLayout"
                        card_view:layout_constraintHorizontal_bias="0.5"
                        card_view:layout_constraintStart_toEndOf="@+id/dialogUserProfileGenderEditingCancelRelativeLayout">

                        <TextView
                            android:id="@+id/dialogUserProfileGenderEditingFemaleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textColor="@color/White"
                            android:textSize="15sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/dialogUserProfileGenderEditingMaleRelativeLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/gradient_blue_capsule"
                        android:gravity="center"
                        android:padding="5dp"
                        card_view:layout_constraintEnd_toStartOf="@+id/dialogUserProfileGenderEditingNotSpecifiedRelativeLayout"
                        card_view:layout_constraintHorizontal_bias="0.5"
                        card_view:layout_constraintStart_toEndOf="@+id/dialogUserProfileGenderEditingFemaleRelativeLayout">

                        <TextView
                            android:id="@+id/dialogUserProfileGenderEditingMaleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textColor="@color/White"
                            android:textSize="15sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/dialogUserProfileGenderEditingNotSpecifiedRelativeLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/gradient_blue_capsule"
                        android:gravity="center"
                        android:padding="5dp"
                        card_view:layout_constraintEnd_toEndOf="parent"
                        card_view:layout_constraintHorizontal_bias="0.5"
                        card_view:layout_constraintStart_toEndOf="@+id/dialogUserProfileGenderEditingMaleRelativeLayout">

                        <TextView
                            android:id="@+id/dialogUserProfileGenderEditingNotSpecifiedTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_specified"
                            android:textColor="@color/White"
                            android:textSize="15sp" />

                    </RelativeLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </eightbitlab.com.blurview.BlurView>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>