<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_stripes_pink"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/trackingStartStopBackgroundCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="12dp"
        card_view:cardUseCompatPadding="true">

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/trackingStartStopBlurView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_glass_capsule_border"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/trackingStartStopIamgeView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_play"
                    app:tint="@color/AppGray" />

                <TextView
                    android:id="@+id/trackingStartStopTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/trackingStartStopIamgeView"
                    android:text="@string/start_new_route"
                    android:textColor="@color/AppGray"
                    android:textSize="20sp" />

            </RelativeLayout>

        </eightbitlab.com.blurview.BlurView>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/trackingMapBackgroundCardView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginHorizontal="8dp"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="12dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_glass_capsule_border"
            android:padding="2dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/gradient_glass_capsule_border"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="0dp">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/trackingMapView"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:background="@drawable/gradient_glass_capsule_border"
                    android:padding="0dp" />

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/trackingInformationBackgroundCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginHorizontal="8dp"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="12dp"
        card_view:cardUseCompatPadding="true">

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/trackingInformationBlurView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_glass_capsule_border"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/trackingTimerImageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_timer"
                    app:tint="@color/AppGray" />

                <TextView
                    android:id="@+id/trackingDurationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/trackingTimerImageView"
                    android:text="Duration"
                    android:textColor="@color/AppGray" />

                <TextView
                    android:id="@+id/trackingDurationDataTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/trackingDurationTextView"
                    android:layout_alignStart="@+id/trackingDurationTextView"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/empty_time"
                    android:textColor="@color/AppGray" />

                <ImageView
                    android:id="@+id/trackingDistanceImageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="210dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_timeline"
                    app:tint="@color/AppGray" />

                <TextView
                    android:id="@+id/trackingDistanceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/trackingDistanceImageView"
                    android:text="@string/distance"
                    android:textColor="@color/AppGray" />

                <TextView
                    android:id="@+id/trackingDistanceDataTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/trackingDistanceTextView"
                    android:layout_alignStart="@+id/trackingDistanceTextView"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/empty_distance"
                    android:textColor="@color/AppGray" />

            </RelativeLayout>

        </eightbitlab.com.blurview.BlurView>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>